--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>The Odin Project: Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo"></div>
-        <div class="header-link">
-            <ul>
-                <a href="">header link one</a>
-                <a href="">header link two</a>
-                <a href="">header link three</a>
-            </ul>
-        </div>
-    </div>
     <div class="hero">
-        <div class="hero-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="header-link">
+                <ul>
+                    <a href="">header link one</a>
+                    <a href="">header link two</a>
+                    <a href="">header link three</a>
+                </ul>
+            </div>
         </div>
-        <div class="hero-img">
-            <div>This is a placeholder for an image</div>
-        </div> 
+        <div class="hero-main">
+            <div class="hero-text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-img">
+                <div>This is a placeholder for an image</div>
+            </div> 
+        </div>
+        
     </div>
     <div class="info">
         <h2>Some random information</h2>
