hero section styles, need to fix placeholder size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button>Sign up</button>
             </div>
             <div class="hero-img">
-                <div>This is a placeholder for an image</div>
+                <div>this is a placeholder for an image</div>
             </div> 
         </div>
         
