--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
     </div>
     <div class="info">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
         <div class="deck">
             <div class="card">
                 <div class="card-img"></div>
