--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <div class="hero-img">
-                <div>this is a placeholder for an image</div>
+            <div class="hero-img">this is a placeholder for an image
             </div> 
         </div>
         
@@ -62,7 +61,7 @@
     <div class="call">
         <div class="call-text">
             <h3>Call to action! It's time!</h3>
-            <p>Sign up for our proeuct by clicking that button right over there!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
